force-app/main/default/objects/Contact/fields/Email__c.field-meta.xml
<CustomField>
    <fullName>Email__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Email</label>
    <type>Checkbox</type>
</CustomField>