force-app/main/default/objects/Contact/validationRules/Communication_Preference.validationRule-meta.xml
<ValidationRule>
    <fullName>Communication_Preference</fullName>
    <active>true</active>
    <errorConditionFormula>OR(
AND
( 
Email__c = True,
ISBLANK( Email ) 
),
AND
( 
Phone__c  = True,
ISBLANK(  Phone  ) 
)
)</errorConditionFormula>
    <errorMessage>You must enter the chosen communication tools.</errorMessage>
</ValidationRule>