force-app/main/default/objects/Contact/listViews/Attendees.listView-meta.xml
<ListView>
    <fullName>Attendees</fullName>
    <columns>CONTACT.SALUTATION</columns>
    <columns>FULL_NAME</columns>
    <columns>CONTACT.TITLE</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CONTACT.PHONE1</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>Dietary_of_Contact__c</columns>
    <columns>Contact_Type__c</columns>
    <columns>CONTACT.RECORDTYPE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CONTACT.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Contact.Attendee</value>
    </filters>
    <label>Attendees</label>
</ListView>